Сhange absolute path to relative